
[TestLoadConfig/gibberish - 1]
[1:1] string was used where mapping is expected
>  1 | jjjhj
       ^

---

[TestLoadConfig/only-gosthome - 1]
[2:11] field Gosthome was wrong: MAC: cannot be blank; Name: cannot be blank.

>  2 | gosthome: null
                 ^

---

[TestLoadConfig/valid_gosthome_with_unregistered_component - 1]
[7:4] cannot parse unknown component: app
   4 |   mac: 00:aa:bb:cc:dd:ee
   5 | 
   6 | app:
>  7 |   a: b
          ^

---

[TestLoadConfig/valid_gosthome_with_registered_component_and_invalid_component - 1]
[7:6] field A was wrong: a is wrong

   4 |   mac: 00:aa:bb:cc:dd:ee
   5 | 
   6 | app:
>  7 |   a: "wrong value"
            ^

---

[TestYaml/notok - 1]
[2:4] field A was wrong: a is wrong

>  2 | a: "wrong value"
          ^

---


[TestLoadConfig/valid_gosthome_with_unregistered_empty_component - 1]
[6:6] cannot parse unknown component: app
   3 |   name: exampl
   4 |   mac: 00:aa:bb:cc:dd:ee
   5 | 
>  6 | app: null
            ^

---
